Fix the new alias window being wonky with the button placement when resized vertically; but it is still a little weird

--- a/application/ui/NewAlias.glade
+++ b/application/ui/NewAlias.glade
@@ -11,11 +11,13 @@
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
         <property name="can_focus">False</property>
+        <property name="valign">start</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="dialog-action_area1">
             <property name="can_focus">False</property>
+            <property name="halign">center</property>
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="button1">
@@ -57,6 +59,7 @@
           <object class="GtkGrid" id="grid1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="margin_bottom">4</property>
             <property name="vexpand">True</property>
             <child>
               <object class="GtkLabel" id="label1">
