--- a/application/ui/About.glade
+++ b/application/ui/About.glade
@@ -12,6 +12,7 @@
     <property name="website">http://dx.no-ip.org</property>
     <property name="authors">Robert MacGregor</property>
     <property name="license_type">mit-x11</property>
+    <signal name="response" handler="user_response" swapped="no"/>
     <child internal-child="vbox">
       <object class="GtkBox" id="aboutdialog-vbox1">
         <property name="can_focus">False</property>
@@ -20,6 +21,7 @@
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="aboutdialog-action_area1">
             <property name="can_focus">False</property>
+            <property name="halign">center</property>
             <property name="layout_style">end</property>
           </object>
           <packing>
