--- a/application/ui/Main.glade
+++ b/application/ui/Main.glade
@@ -112,6 +112,7 @@ Line Seven</property>
                         <property name="tooltip_text" translatable="yes">Save the text buffer of the currently selected alias to a file on disk.</property>
                         <property name="image">image3</property>
                         <property name="use_stock">False</property>
+                        <signal name="activate" handler="save_text_buffer" swapped="no"/>
                         <accelerator key="s" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
@@ -145,8 +146,8 @@ Line Seven</property>
                     </child>
                   </object>
                 </child>
-                <accelerator key="f" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                 <accelerator key="f" signal="popup-menu" modifiers="GDK_CONTROL_MASK"/>
+                <accelerator key="f" signal="activate" modifiers="GDK_CONTROL_MASK"/>
               </object>
             </child>
             <child>
