--- a/application/ui/Main.glade
+++ b/application/ui/Main.glade
@@ -146,8 +146,8 @@ Line Seven</property>
                     </child>
                   </object>
                 </child>
-                <accelerator key="f" signal="popup-menu" modifiers="GDK_CONTROL_MASK"/>
                 <accelerator key="f" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                <accelerator key="f" signal="popup-menu" modifiers="GDK_CONTROL_MASK"/>
               </object>
             </child>
             <child>
@@ -276,7 +276,10 @@ Line Seven</property>
                         <property name="can_focus">False</property>
                         <property name="halign">start</property>
                         <property name="valign">start</property>
+                        <property name="xalign">0.44999998807907104</property>
                         <property name="use_markup">True</property>
+                        <property name="wrap">True</property>
+                        <property name="wrap_mode">word-char</property>
                         <property name="selectable">True</property>
                       </object>
                     </child>
