--- a/application/ui/About.glade
+++ b/application/ui/About.glade
@@ -5,12 +5,15 @@
   <object class="GtkAboutDialog" id="AboutWindow">
     <property name="can_focus">False</property>
     <property name="modal">True</property>
+    <property name="icon">logo.ico</property>
     <property name="type_hint">dialog</property>
     <property name="program_name">Test MUCK Client</property>
     <property name="version">0.0.0</property>
-    <property name="comments" translatable="yes">WTF?</property>
+    <property name="comments" translatable="yes">A simple but functional MUCK client written in Python.</property>
     <property name="website">http://dx.no-ip.org</property>
     <property name="authors">Robert MacGregor</property>
+    <property name="logo">logo.ico</property>
+    <property name="logo_icon_name"/>
     <property name="license_type">mit-x11</property>
     <signal name="response" handler="user_response" swapped="no"/>
     <child internal-child="vbox">
