--- a/application/ui/About.glade
+++ b/application/ui/About.glade
@@ -7,7 +7,7 @@
     <property name="modal">True</property>
     <property name="icon">logo.ico</property>
     <property name="type_hint">dialog</property>
-    <property name="program_name">Test MUCK Client</property>
+    <property name="program_name">RagoraMUCK</property>
     <property name="version">0.0.0</property>
     <property name="comments" translatable="yes">A simple but functional MUCK client written in Python.</property>
     <property name="website">http://dx.no-ip.org</property>
