--- a/application/ui/Main.glade
+++ b/application/ui/Main.glade
@@ -51,10 +51,10 @@ Line Seven</property>
   </object>
   <object class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Test Client</property>
+    <property name="title" translatable="yes">RagoraMUCK</property>
     <property name="window_position">center</property>
     <property name="default_width">640</property>
-    <property name="default_height">240</property>
+    <property name="default_height">237</property>
     <property name="icon">logo.ico</property>
     <signal name="destroy" handler="close" swapped="no"/>
     <child>
